# MCP-Tuna

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  frontend-mcp-remediation-matrix.md  mcp_gateway.py  progress.md  pyproject.toml  server.json
.github/workflows/: ci.yml  docker.yml  publish.yml
app/: CLAUDE.md  main.py
app/api/: api_chat.py  api_deck.py
app/core/: agent_factory.py  config.py  confirmation_gate.py
app/db/: base.py  models.py  session.py
app/generation/: qwen3_registry.py  registry.py
app/services/: __init__.py  base.py  run_servers.py
app/utils/: exception.py  timing.py
data_cleaning_pipeline/: CLAUDE.md  __init__.py
data_cleaning_pipeline/mcp/: server.py
data_cleaning_pipeline/services/: cleaning_service.py
data_evaluator_pipeline/: CLAUDE.md  pipeline.py  usage.py  xls_to_jsonl.py
data_evaluator_pipeline/analysis/: dataset_analyzer.py
data_evaluator_pipeline/core/: data.py  evaluator.py
data_evaluator_pipeline/io/: loaders.py
data_evaluator_pipeline/mcp/: server.py
data_evaluator_pipeline/providers/: base.py
data_evaluator_pipeline/selection/: base.py  quality.py
data_evaluator_pipeline/services/: pipeline_service.py
data_generator_pipeline/: CLAUDE.md  PROMPT_SAMPLE.py  data_exporter.py  llm_clients.py  loaders.py  parsers_extractor.py  pipeline.py  prompt_template_registry.py  sft_generator.py
data_generator_pipeline/core/: base.py  factory.py  pipeline.py
data_generator_pipeline/exporters/: dataset.py
data_generator_pipeline/generators/: dpo.py  grpo.py  registry.py  sft.py
data_generator_pipeline/mcp/: server.py
data_generator_pipeline/models/: datapoints.py
data_generator_pipeline/parsers/: json_extractor.py
data_generator_pipeline/prompts/: templates.py
data_generator_pipeline/scripts/: config.yaml  run_mcp_server.py  run_new_mcp_server.py  run_updated_mcp_server.py  test.py
data_generator_pipeline/services/: hf_recipe_service.py  pipeline_service.py
data_generator_pipeline/test/: test_markdown_loader.py  test_new_pipeline.py  test_old_pipeline.py
data_normalization_pipeline/: CLAUDE.md  __init__.py
data_normalization_pipeline/mcp/: server.py
data_normalization_pipeline/services/: normalization_service.py
demos/: demo_agent_mcp.py  demo_api_with_tools.py
examples/: claude-code-demo.json  claude-desktop-all-servers.json  claude-desktop-data-only.json  claude_desktop_config.json  claude_desktop_uvx.json  codex-demo.toml  codex_config.toml  cursor-http-all.json  cursor_mcp.json  http_config.json
finetuning_pipeline/: CLAUDE.md
finetuning_pipeline/scripts/: run_mcp_server.py
finetuning_pipeline/services/: adapter_service.py  curriculum_service.py  gpu_service.py  inference_service.py  model_discovery_service.py  pipeline_service.py  resource_service.py  sequential_service.py  temp.py  training_recipe_service.py  training_service.py  vlm_utils.py
frontend/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
hosting_pipeline/: CLAUDE.md  __init__.py
hosting_pipeline/mcp/: server.py
hosting_pipeline/services/: chat_service.py  hosting_service.py
logs/: CLAUDE.md
model_evaluator_pipeline/: CLAUDE.md  __init__.py
model_evaluator_pipeline/judges/: __init__.py  aggregation.py  base.py  models.py  pairwise.py  pointwise.py  reference_free.py  registry.py  rubric.py
model_evaluator_pipeline/mcp/: server.py
model_evaluator_pipeline/metrics/: __init__.py  bertscore.py  llm_judge.py  perplexity.py  rouge.py
model_evaluator_pipeline/models/: __init__.py  ft_evaluator.py
model_evaluator_pipeline/prompts/: __init__.py  ft_evaluator_prompt.md
model_evaluator_pipeline/services/: __init__.py  evaluation_service.py  ft_evaluator_service.py  judge_service.py
orchestration/: CLAUDE.md  __init__.py  orchestration_trainer.py  rewards.py  trajectory.py  workflow.py
orchestration/mcp/: server.py
scripts/: chat_cli.py  e2e_3b_curriculum.py  e2e_3b_sft.py  e2e_compare_models.py  e2e_curriculum_3b_vs_1b.py  e2e_finetune_evaluate.py  e2e_testmd_llama32_1b_mcp.py  e2e_two_step_eval.py  eval_e0_base_vs_adapter.py  finetune_llama32_sft.py  generate_sft_5_from_test_md.py  generate_sft_e0_dataset.py  generate_sft_e0_focused.py  prepare_curriculum_demo_subset.py  run_data_server.py  run_eval_server.py  run_gateway.py  run_host_server.py  run_model_eval_server.py  run_orchestrate_server.py  run_train_server.py  setup_mcp.py
servers/: _entry.py  data_server.py  eval_server.py  host_server.py  model_eval_server.py  orchestrate_server.py  train_server.py
shared/: CLAUDE.md  __init__.py  ai_diagnostic.py  async_utils.py  config.py  converters.py  costing.py  dataset_exporter.py  dataset_models.py  dataset_service.py  diagnostics.py  exceptions.py  gpu_lock.py  json_extractor.py  model_capabilities.py  models.py  multimodal_models.py  object_storage.py  output_naming.py  persistence.py  pipeline_executor.py  provider_factory.py  providers.py  recipe_registry.py  registry.py  training_callback.py  training_jobs.py  version.py  workflow_planner.py  workspace_paths.py
src/agentsoul/: CLAUDE.md  __init__.py
tests/: CLAUDE.md  conftest.py  test_auto_deploy.py  test_gateway_async_boundaries.py  test_host_chat_tools.py  test_new_gateway_tools.py  test_packaging_metadata.py  test_release_metadata.py  test_server_manifest.py  test_setup_mcp.py  test_tool_descriptions.py  test_training_monitor_tools.py  test_workflow_async_tools.py
tests/app/: test_request_parser.py
tests/data_cleaning_pipeline/: test_cleaning_service.py
tests/data_evaluator_pipeline/: test_evaluator_service.py
tests/data_generator_pipeline/: test_loaders.py
tests/data_normalization_pipeline/: test_normalization_service.py
tests/finetuning_pipeline/: test_adapter_service.py  test_inference_service.py  test_model_discovery_service.py  test_resource_service.py  test_sequential_service.py  test_training_service.py  test_training_service_callbacks.py
(+247 files in other folders)
