[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tuna"
version = "0.2.0"
description = "End-to-end LLM fine-tuning platform with MCP tool support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["llm", "fine-tuning", "mcp", "sft", "dpo", "grpo", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core — required by all servers (no GPU)
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "mcp>=1.0",
    "pyyaml",
    "tqdm",
    # LLM providers
    "openai>=1.0",
    "anthropic>=0.42",
    "google-genai>=1.0",
]

[project.optional-dependencies]
# -- Per-server dependency groups --
data = [
    "openai>=1.0",
]
eval = [
    "openai>=1.0",
    "scikit-learn",
    "spacy>=3.7",
    "transformers",
]
model-eval = [
    "openai>=1.0",
    "rouge-score>=0.1",
    "evaluate>=0.4",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "absl-py>=2.0",
]
model-eval-full = [
    "mcp-tuna[model-eval]",
    "bert-score>=0.3",
]
training = [
    "torch>=2.3.0",
    "transformers",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0",
    "peft>=0.13",
    "trl>=0.12",
    "datasets",
    "sentence-transformers",
    "scikit-learn",
    "scipy",
    "hf-xet>=1.2.0",
]
hosting = [
    "torch>=2.3.0",
    "transformers",
    "accelerate>=1.0.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "sse-starlette>=1.0",
]
orchestration = [
    "openai>=1.0",
]
export = [
    "llama-cpp-python>=0.2",
]
# -- Infrastructure groups --
backend = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
]
memory = [
    "chromadb>=0.4",
]
retrieval = [
    "faiss-cpu>=1.7",
    "rank-bm25>=0.2",
]
tracing = [
    "auditi",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff",
]
# -- Composite groups --
all-servers = [
    "mcp-tuna[data,eval,model-eval-full,training,hosting,orchestration]",
]
all = [
    "mcp-tuna[all-servers,backend,memory,retrieval,tracing,dev,export]",
]

[project.scripts]
mcp-tuna-gateway = "scripts.run_gateway:main"
mcp-tuna-data = "scripts.run_data_server:main"
mcp-tuna-eval = "scripts.run_eval_server:main"
mcp-tuna-model-eval = "scripts.run_model_eval_server:main"
mcp-tuna-train = "scripts.run_train_server:main"
mcp-tuna-host = "scripts.run_host_server:main"
mcp-tuna-orchestrate = "scripts.run_orchestrate_server:main"
mcp-tuna-chat = "scripts.chat_cli:main"

[project.urls]
Repository = "https://github.com/deduu/AgentY"
Issues = "https://github.com/deduu/AgentY/issues"
Changelog = "https://github.com/deduu/AgentY/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agentsoul",
    "scripts",
    "servers",
    "shared",
    "data_generator_pipeline",
    "data_cleaning_pipeline",
    "data_normalization_pipeline",
    "data_evaluator_pipeline",
    "model_evaluator_pipeline",
    "finetuning_pipeline",
    "hosting_pipeline",
    "orchestration",
]
force-include = { "mcp_gateway.py" = "mcp_gateway.py" }

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]          # re-exports are intentional
"app/generation/registry.py" = ["E402"]  # dotenv must load before imports
"data_generator_pipeline/test/*" = ["E402", "F821"]  # legacy test scripts
"data_generator_pipeline/test/test_old_pipeline.py" = ["E402"]
"scripts/e2e_*.py" = ["E402"]       # dotenv before imports
"scripts/finetune_*.py" = ["E402"]  # dotenv before imports

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
